--- a/app/components/Subtitulo/Subtitulo.module.css
+++ b/app/components/Subtitulo/Subtitulo.module.css
@@ -1,50 +1,8 @@
-@import url(https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css);
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
-html {
+.html {
   min-height: 100%;
 }
 
-body {
+.body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -53,8 +11,8 @@ body {
   padding-bottom: 5rem;
 }
 
-h1,
-h2 {
+.h1,
+.h2 {
   color: white;
   padding: 3rem 0;
   text-align: center;
@@ -86,12 +44,12 @@ h2 {
   font-weight: bold;
 }
 
-label {
+.label {
   color: white;
 }
 
-input[type="date"],
-input[type="time"] {
+.input[type="date"],
+.input[type="time"] {
   height: 38px;
   padding: 6px 10px;
   background-color: #fff;
